alteração no link da pagina sobre mim

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     usuário.
                     Estou aqui para ajudá-lo a transformar suas ideias em realidade e dar vida aos seus projetos!</p>
                 <div class="btn__sobre">
-                    <a href="https://weslley-silva23.github.io/pagina-sobre-mim/" target="_blank">Mais Sobre Mim</a>
+                    <a href="https://pagina-sobre-mim.netlify.app/" target="_blank">Mais Sobre Mim</a>
                 </div><!--btn__sobre-->
             </div><!--sobre-->
         </div><!--container-->
