alteração no link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="menu__descktop">
             <ul>
                 <li><a href="https://www.linkedin.com/in/weslley-silva-rocha-/" target="_blank">LINKEDIN</a></li>
-                <li><a href="https://meus-projetos-portflio.netlify.app/" target="_blank">PROJETOS</a></li>
+                <li><a href="https://weslley-silva23.github.io/pagina-meus-projetos/" target="_blank">PROJETOS</a></li>
                 <li><a href="https://wa.me/5511995069685" target="_blank">CONTATO</a></li>
                 <li><a href="https://github.com/Weslley-silva23" target="_blank">GITHUB</a></li>
             </ul>
