--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="menu__descktop">
             <ul>
                 <li><a href="https://www.linkedin.com/in/weslley-silva-rocha-/" target="_blank">LINKEDIN</a></li>
-                <li><a href="https://meus-projetos-portflio.netlify.app/"     target="_blank">PROJETOS</a></li>
+                <li><a href="https://meus-projetos-portflio.netlify.app/" target="_blank">PROJETOS</a></li>
                 <li><a href="https://wa.me/5511995069685" target="_blank">CONTATO</a></li>
                 <li><a href="https://github.com/Weslley-silva23" target="_blank">GITHUB</a></li>
             </ul>
@@ -32,8 +32,8 @@
                 <div class="chamada__links">
                     <ul>
                         <li><a href="https://www.linkedin.com/in/weslley-silva-rocha-/">LINKEDIN</a></li>
-                        <li><a href="projetos.html">PROJETOS</a></li>
-                        <li><a href="">CONTATO</a></li>
+                        <li><a href="https://weslley-silva23.github.io/pagina-meus-projetos/">PROJETOS</a></li>
+                        <li><a href="https://wa.me/5511995069685">CONTATO</a></li>
                         <li><a href="https://github.com/Weslley-silva23">GITHUB</a></li>
                     </ul>
                 </div>
