alteração nos links dos botoes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="chamada__links">
                     <ul>
                         <li><a href="https://www.linkedin.com/in/weslley-silva-rocha-/">LINKEDIN</a></li>
-                        <li><a href="https://weslley-silva23.github.io/pagina-meus-projetos/">PROJETOS</a></li>
+                        <li><a href="https://meus-projetos-portflio.netlify.app/">PROJETOS</a></li>
                         <li><a href="https://wa.me/5511995069685">CONTATO</a></li>
                         <li><a href="https://github.com/Weslley-silva23">GITHUB</a></li>
                     </ul>
