Alteração no titulo.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </div><!--img__perfil-->
             <div class="sobre">
                 <h1>Olá eu Sou o Weslley Silva!</h1>
-                <h2> Desenvolvedor Web </h2>
-                <p>Como desenvolvedor front-end, meu principal objetivo é criar uma experiência agradável para o
+                <h2> Desenvolvedor Front end </h2>
+                <p>Como Desenvolvedor Front-end, Meu Principal Objetivo é criar uma experiência agradável para o
                     usuário.
                     Estou aqui para ajudá-lo a transformar suas ideias em realidade e dar vida aos seus projetos!</p>
                 <div class="btn__sobre">
